# spam_detection

./: .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  ToDo.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  database.py  main.py
app/api/: auth.py  emails.py  monitoring.py  users.py
app/core/: config.py  deps.py  security.py
app/models/: user.py
app/schemas/: __init__.py
app/services/: imap_service.py  smtp_service.py  spam_classifier.py
app/workers/: __init__.py  tasks.py
docs/: CLASSIFIER_UPDATE.md
models/: README.md  logistic_regression_model.joblib  model_lr.joblib  model_nb.joblib  spam_classifier_model.joblib  spam_detection.ipynb  tfidf_vectorizer.joblib
scripts/: copy_trained_models.py  setup.py  test_hash.py
spam-detector-chromeextension/: content.js  manifest.json  styles.css
spam-detector-chromeextension/spam detector/: package.json  vite.config.ts
spam-detector-chromeextension/spam detector/app/: content.ts
spam-detector-chromeextension/spam detector/app/routes/: home.tsx
spam-detector-chromeextension/spam detector/public/: manifest.json
